The geometry nodes aren't updating the animation render. Everything else is. #89397

Closed
opened 2021-06-23 22:09:54 +02:00 by Robert Shane · 16 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-22 21:12, hash: dbc054bb88
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b8
Worked: Never

Short description of error
The geometry nodes aren't updating when the animation is rendered. Everything else is though. If I render still images, it works fine. In the attached blend file, I have a Geometry Node setup that animates and a cube that slides across the screen. When I press spacebar to play the animation, the viewport looks fine. The Geometry Node move around like they should. However, when I render the animation, the Geometry Nodes don't update but the cube does. The file was created in 2.93 and imported into 3.0 just to see if it was still broken and it's still broken. I've setup this scene before (turning it into a tutorial) and it worked fine the first time. Recreating the scene step-by-step made it break.

This seems to be related to usage of an object that is hidden in renders.
If this object uses Fcurve animation on its genode modifier properties, animation does not update, if it uses drivers, animation updates

Exact steps for others to reproduce the error
Render animation for these two files:
For upload.blend
For upload tweaked.blend

note: drivers on all geonode modifiers seem to be mandatory to make it work

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-22 21:12, hash: `dbc054bb88` Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: `84da05a8b8` Worked: Never **Short description of error** The geometry nodes aren't updating when the animation is rendered. Everything else is though. If I render still images, it works fine. In the attached blend file, I have a Geometry Node setup that animates and a cube that slides across the screen. When I press spacebar to play the animation, the viewport looks fine. The Geometry Node move around like they should. However, when I render the animation, the Geometry Nodes don't update but the cube does. The file was created in 2.93 and imported into 3.0 just to see if it was still broken and it's still broken. I've setup this scene before (turning it into a tutorial) and it worked fine the first time. Recreating the scene step-by-step made it break. This seems to be related to usage of an object that is hidden in renders. If this object uses Fcurve animation on its genode modifier properties, animation does not update, if it uses drivers, animation updates **Exact steps for others to reproduce the error** Render animation for these two files: [For upload.blend](https://archive.blender.org/developer/F10191486/For_upload.blend) [For upload tweaked.blend](https://archive.blender.org/developer/F10201920/For_upload_tweaked.blend) note: drivers on all geonode modifiers seem to be mandatory to make it work
Author

Added subscriber: @RobertShane

Added subscriber: @RobertShane

Added subscriber: @chemicalcrux

Added subscriber: @chemicalcrux

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

It looks like the file is missing -- can you attach that to the report?

It looks like the file is missing -- can you attach that to the report?
Author

For upload.blend

I didn't realize this 👆 was the upload. I deleted it by mistake

[For upload.blend](https://archive.blender.org/developer/F10191486/For_upload.blend) I didn't realize this 👆 was the upload. I deleted it by mistake

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

The issue is that the 'Delete Grid Geometry' object has its Render visibility turned off. Turning it on will do the right thing; the 'Grid' object properly updates during the animation but the 'Delete Grid Geometry' object will obviously obscure the scene if nothing else is done to make it invisible.

I'm not sure if this is expected or not. Deferring to the developers for a second opinion.

The issue is that the 'Delete Grid Geometry' object has its Render visibility turned off. Turning it on will do the right thing; the 'Grid' object properly updates during the animation but the 'Delete Grid Geometry' object will obviously obscure the scene if nothing else is done to make it invisible. I'm not sure if this is expected or not. Deferring to the developers for a second opinion.
Author

For upload 2.blend
Working0001-0100.mp4

Here's a blend file where it's working with render visibility turned off so that's not the issue. This scene was created from scratch. Maybe you guys can spot the difference better than I can.

[For upload 2.blend](https://archive.blender.org/developer/F10194411/For_upload_2.blend) [Working0001-0100.mp4](https://archive.blender.org/developer/F10194413/Working0001-0100.mp4) Here's a blend file where it's working with render visibility turned off so that's not the issue. This scene was created from scratch. Maybe you guys can spot the difference better than I can.
Member

Added subscribers: @JacquesLucke, @dr.sybren, @lichtwerk

Added subscribers: @JacquesLucke, @dr.sybren, @lichtwerk
Member

Hm, there seems to be a difference in regards to animation evaluation on hidden objects with geonodes:

  • fcurve based animation does not seem to be evaluated [as in For upload.blend]
  • driver based animation does seem to be evaluated [as in For upload 2.blend]

If I tweak For upload.blend to use drivers instead of fcurves it seems to update properly on renders even if the object is hidden [note we seem to need drivers on both geonode modifiers]:
For upload tweaked.blend

@JacquesLucke , @dr.sybren : this is not expected behavior, is it?
Will confirm for now

Hm, there seems to be a difference in regards to animation evaluation on hidden objects with geonodes: - fcurve based animation does not seem to be evaluated [as in `For upload.blend`] - driver based animation does seem to be evaluated [as in `For upload 2.blend`] If I tweak `For upload.blend` to use drivers instead of fcurves it seems to update properly on renders even if the object is hidden [note we seem to need drivers on **both** geonode modifiers]: [For upload tweaked.blend](https://archive.blender.org/developer/F10201920/For_upload_tweaked.blend) @JacquesLucke , @dr.sybren : this is not expected behavior, is it? Will confirm for now
Member

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

In #89397#1182520, @lichtwerk wrote:

  • fcurve based animation does not seem to be evaluated [as in For upload.blend]
  • driver based animation does seem to be evaluated [as in For upload 2.blend]
    ...
    @JacquesLucke , @dr.sybren : this is not expected behavior, is it?

No, that's not expected. Not by me, anyway, but I know very little about the internals of Geometry Nodes.

> In #89397#1182520, @lichtwerk wrote: > - fcurve based animation does not seem to be evaluated [as in `For upload.blend`] > - driver based animation does seem to be evaluated [as in `For upload 2.blend`] > ... > @JacquesLucke , @dr.sybren : this is not expected behavior, is it? No, that's not expected. Not by me, anyway, but I know very little about the internals of Geometry Nodes.

This issue was referenced by 77834aff22

This issue was referenced by 77834aff223e49eaa3abed56fb120aeca302a0e0
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-07-07 11:02:42 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89397
No description provided.